section into complete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h2 class="heading-secondary">
                         Ready for the ultimate culinary experience in your own home?
                     </h2>
-                    <p class="para-primary">
+                    <p class="para-primary u-center-text u-paddig-l-r-10">
                         You are in the best hands with us! Book our exclusive home catering service now and let us
                         transform your home into a Michelin-star kitchen.
                     </p>
@@ -60,6 +60,57 @@
                     <!-- <img class="exp_img exp_img-1" src="img/img-1.jpg" alt="">
                     <img class="exp_img exp_img-2" src="img/img-2.jpg" alt="">
                     <img class="exp_img exp_img-3" src="img/img-3.jpg" alt=""> -->
+                </div>
+            </div>
+        </section>
+        <!-- SECTION INTODUCTION -->
+        <section class="section-intro">
+            <div class="intro">
+                <div class="intro_img-box">
+                    <img class="intro-img" src="../img/hero.jpg" alt="">
+                </div>
+                <div class="intro_text-box">
+                    <div class="intro_text-box-item intro_text-box-item--1">
+                        <h2 class="heading-secondary">
+                            Heading 01
+                        </h2>
+                        <p class="para-primary">
+                            We take care of everything so that you can concentrate fully on your guests. From exquisite
+                            drinks to exceptional dishes to first-class service - we have everything under control.
+                        </p>
+                    </div>
+                    <div class="intro_text-box-item intro_text-box-item--2">
+                        <h2 class="heading-secondary">
+                            Heading 02
+                        </h2>
+                        <p class="para-primary">
+                            Our talented chefs will conjure up an unforgettable taste experience for you and your guests
+                            with exquisite ingredients and sophisticated creations. Whether it's an intimate dinner, a
+                            glamorous cocktail party or a festive banquet - we adapt to your wishes and ensure culinary
+                            highlights.
+                        </p>
+                    </div>
+                    <div class="intro_text-box-item intro_text-box-item--3">
+                        <h2 class="heading-secondary">
+                            Heading 03
+                        </h2>
+                        <p class="para-primary">
+                            Our talented chefs will conjure up an unforgettable taste experience for you and your guests
+                            with exquisite ingredients and sophisticated creations. Whether it's an intimate dinner, a
+                            glamorous cocktail party or a festive banquet - we adapt to your wishes and ensure culinary
+                            highlights.
+                        </p>
+                    </div>
+                </div>
+
+                <p class="para-primary u-center-text u-paddig-l-r-10">Founded in 2012, Take a Chef began with the deep
+                    belief that the
+                    best culinary
+                    talent should not be hidden behind the thick walls of a restaurant kitchen; it should be allowed to
+                    shine in the place where everyone enjoys their most precious meals – their own dining table.
+                </p>
+                <div class="btn-box">
+                    <a href="#" class="btn">Getting Started</a>
                 </div>
             </div>
         </section>
