--- a/index.html
+++ b/index.html
@@ -114,6 +114,44 @@
                 </div>
             </div>
         </section>
+
+        <!-- SECTION HOW IT WORKS -->
+        <div class="section-hiw">
+            <div class="hiw container">
+                <div class="hiw__heading">
+                    <h2 class="heading-secondary"> How It Works </h2>
+                    <h3 class="heading-tertiary u-paddig-l-r-6"> Would you like to transform your home
+                        into a
+                        gourmet
+                        experience? It's that
+                        easy: </h3>
+                </div>
+
+                <div class="hiw__z-pattern">
+                    <!-- 01 -->
+                    <div class="hiw__z-pattern--text-box">
+                        text
+                    </div>
+                    <div class="hiw__z-pattern--img-box">
+                        <img class="z z__img-01 z__img-01--img-1" src="img/ourservice/img-4.jpg" alt="">
+                        <img class="z z__img-01 z__img-01--img-2" src="img/ourservice/img-5.jpg" alt="">
+                        <img class="z z__img-01 z__img-01--img-3" src="img/ourservice/img-6.jpg" alt="">
+                        <img class="z z__img-01 z__img-01--img-4" src="img/ourservice/img-7.jpg" alt="">
+                        <img class="z z__img-01--img-5" src="img/ourservice/img-8.jpg" alt="">
+                    </div>
+
+                    <!-- 02 -->
+                    <div class=" z-pattern--img-box">
+                        img
+                    </div>
+                    <div class="z-pattern--text-box">
+                        text
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </main>
 
 </body>
