--- a/index.html
+++ b/index.html
@@ -117,38 +117,93 @@
 
         <!-- SECTION HOW IT WORKS -->
         <div class="section-hiw">
-            <div class="hiw container">
-                <div class="hiw__heading">
-                    <h2 class="heading-secondary"> How It Works </h2>
-                    <h3 class="heading-tertiary u-paddig-l-r-6"> Would you like to transform your home
-                        into a
-                        gourmet
-                        experience? It's that
-                        easy: </h3>
-                </div>
-
-                <div class="hiw__z-pattern">
-                    <!-- 01 -->
-                    <div class="hiw__z-pattern--text-box">
-                        text
-                    </div>
-                    <div class="hiw__z-pattern--img-box">
-                        <img class="z z__img-01 z__img-01--img-1" src="img/ourservice/img-4.jpg" alt="">
-                        <img class="z z__img-01 z__img-01--img-2" src="img/ourservice/img-5.jpg" alt="">
-                        <img class="z z__img-01 z__img-01--img-3" src="img/ourservice/img-6.jpg" alt="">
-                        <img class="z z__img-01 z__img-01--img-4" src="img/ourservice/img-7.jpg" alt="">
-                        <img class="z z__img-01--img-5" src="img/ourservice/img-8.jpg" alt="">
+            <div class="container">
+                <div class="hiw">
+                    <div class="hiw__heading">
+                        <h2 class="heading-secondary"> How It Works </h2>
+                        <h3 class="heading-tertiary u-paddig-l-r-6"> Would you like to transform your home
+                            into a
+                            gourmet
+                            experience? It's that
+                            easy: </h3>
                     </div>
 
-                    <!-- 02 -->
-                    <div class=" z-pattern--img-box">
-                        img
-                    </div>
-                    <div class="z-pattern--text-box">
-                        text
-                    </div>
+                    <div class="hiw__z-pattern">
+                        <!-- 01 -->
+                        <div class="z z__text-box">
+                            <h1 class="number">1</h1>
+                            <h3 class="heading-tertiary u-margin-l-2"> Contact</h3>
+                            <p class="para-primary u-margin-l-2">With a comprehensive academic and professional
+                                background, detailed
+                                in their profiles.
+                            </p>
+                        </div>
+                        <div class="z z__img-box z__img-box--01">
+                            <img class="z__img z__img-box--01--img-1" src="img/ourservice/img-4.jpg" alt="">
+                            <img class="z__img z__img-box--01--img-2" src="img/ourservice/img-5.jpg" alt="">
+                            <img class="z__img z__img-box--01--img-3" src="img/ourservice/img-6.jpg" alt="">
+                            <img class="z__img z__img-box--01--img-4" src="img/ourservice/img-7.jpg" alt="">
+                            <img class="z__img z__img-box--01--img-5" src="img/ourservice/img-8.jpg" alt="">
+                        </div>
 
+                        <!-- 02 -->
+                        <div class="z z__img-box z__img-box--02">
+                            <img class="z__img z__img-box--02--img-1" src="img/ourservice/img-9.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-2" src="img/ourservice/img-10.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-3" src="img/ourservice/img-11.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-4" src="img/ourservice/img-12.jpg" alt="">
+                        </div>
+                        <div class="z z__text-box">
+                            <h1 class="number">2</h1>
+                            <h3 class="heading-tertiary">Personal conversation</h3>
+                            <p class="para-primary">With a comprehensive academic and professional background, detailed
+                                in their profiles.
+                            </p>
+                        </div>
 
+                        <!-- 03 -->
+                        <div class="z z__text-box">
+                            <h1 class="number">3</h1>
+                            <h3 class="heading-tertiary">Menu discussion</h3>
+                            <p class="para-primary">With a comprehensive academic and professional background, detailed
+                                in their profiles.
+                            </p>
+                        </div>
+                        <div class="z z__img-box z__img-box--03">
+                            <img class="z__img z__img-box--03--img-1" src="img/ourservice/img-6.jpg" alt="">
+                            <img class="z__img z__img-box--03--img-2" src="img/ourservice/img-10.jpg" alt="">
+                            <img class="z__img z__img-box--03--img-3" src="img/ourservice/img-14.jpg" alt="">
+                        </div>
+
+                        <!-- 04 -->
+                        <div class="z z__img-box z__img-box--02">
+                            <img class="z__img z__img-box--02--img-1" src="img/ourservice/img-9.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-2" src="img/ourservice/img-10.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-3" src="img/ourservice/img-11.jpg" alt="">
+                            <img class="z__img z__img-box--02--img-4" src="img/ourservice/img-12.jpg" alt="">
+                        </div>
+                        <div class="z z__text-box">
+                            <h1 class="number">4</h1>
+                            <h3 class="heading-tertiary">Personal conversation</h3>
+                            <p class="para-primary">With a comprehensive academic and professional background, detailed
+                                in their profiles.
+                            </p>
+                        </div>
+
+                        <!-- 05 -->
+                        <div class="z z__text-box">
+                            <h1 class="number">5</h1>
+                            <h3 class="heading-tertiary">Menu discussion</h3>
+                            <p class="para-primary">With a comprehensive academic and professional background, detailed
+                                in their profiles.
+                            </p>
+                        </div>
+                        <div class="z z__img-box z__img-box--03">
+                            <img class="z__img z__img-box--03--img-1" src="img/ourservice/img-6.jpg" alt="">
+                            <img class="z__img z__img-box--03--img-2" src="img/ourservice/img-10.jpg" alt="">
+                            <img class="z__img z__img-box--03--img-3" src="img/ourservice/img-14.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
