au section dome

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
 
         <!-- SECTION HOW IT WORKS -->
-        <div class="section-hiw">
+        <section class="section-hiw">
             <div class="container">
                 <div class="hiw">
                     <div class="hiw__heading">
@@ -206,7 +206,102 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- SECTION ABOUT US -->
+        <section class="section-about-us">
+            <div class="container">
+                <div class="au">
+                    <!-- heading -->
+                    <div class="au__heading">
+                        <h2 class="heading-secondary"> About us </h2>
+                        <p class="para-secondary u-center-text u-paddig-l-r-10"> We are Peter, Maik and Sascha - a
+                            well-rehearsed team with a shared passion for extraordinary culinary experiences. Peter and
+                            Maik
+                            have known each other for over 30 years through handball. Our close friendship and the
+                            countless
+                            hours spent together on and off the field have made us inseparable.</p>
+                    </div>
+
+                    <div class="au__grid-box au__grid-box--1">
+                        <div class="au__grid-box--1-text">
+                            <h3 class="heading-tertiary-2">Our chef</h3>
+                            <p class="para-tertiary">Sascha, a former Michelin-starred chef, came into our lives a few
+                                years ago when we met
+                                him
+                                on holiday. His outstanding cooking skills and warm-hearted character quickly made him a
+                                valued friend. Our shared love of food and hospitality eventually gave us a special
+                                idea:
+                                why not turn our home into a Michelin-starred restaurant?</p>
+
+                            <h3 class="heading-tertiary-2">The concept</h3>
+                            <p class="para-tertiary">This is how our concept for a different kind of dining experience
+                                was born. We bring
+                                Michelin-starcuisine straight into your home. Together with Sascha, we transform your
+                                own
+                                kitchen into an exclusive restaurant and create unforgettable culinary moments for you
+                                and
+                                your guests.</p>
+
+                            <h3 class="heading-tertiary-2">Our vision</h3>
+                            <p class="para-tertiary">Our vision is to create unique and personal dinner experiences
+                                where you can sit back and
+                                enjoy while we take care of everything. Each of us brings our own expertise and passion
+                                to
+                                make your event a real highlight.</p>
+                        </div>
+                        <div class="au__grid-box--1-img">
+                            <img class="au__img" src=" img/ourservice/img-6.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <p class="para-primary">Whether it's an intimate dinner for two, a festive family celebration or a
+                        special evening with friends - we will make sure that your home becomes the setting for an
+                        unforgettable gourmet adventure. Let's celebrate the joy of eating and the beauty of being
+                        together.
+                    </p>
+
+                    <div class="au__grid-box au__grid-box--2">
+                        <div class="au__grid-box--2-1">
+                            <h3 class="heading-tertiary-2">Our chef</h3>
+                            <p class="para-tertiary">Sascha, a former Michelin-starred chef, came into our lives a few
+                                years ago when we met
+                                him
+                                on holiday. His outstanding cooking skills and warm-hearted character quickly made him a
+                                valued friend. Our shared love of food and hospitality eventually gave us a special
+                                idea:
+                                why not turn our home into a Michelin-starred restaurant?</p>
+                        </div>
+                        <div class="au__grid-box--2-2">
+                            <h3 class="heading-tertiary-2">The concept</h3>
+                            <p class="para-tertiary">This is how our concept for a different kind of dining experience
+                                was born. We bring
+                                Michelin-starcuisine straight into your home. Together with Sascha, we transform your
+                                own
+                                kitchen into an exclusive restaurant and create unforgettable culinary moments for you
+                                and
+                                your guests.</p>
+                        </div>
+                        <div class="au__grid-box--2-3">
+                            <h3 class="heading-tertiary-2">Our vision</h3>
+                            <p class="para-tertiary">Our vision is to create unique and personal dinner experiences
+                                where you can sit back and
+                                enjoy while we take care of everything. Each of us brings our own expertise and passion
+                                to
+                                make your event a real highlight.</p>
+                        </div>
+                    </div>
+                </div>
+                <p class="para-secondary u-center-text u-paddig-l-r-10 u-margin-top-4">Founded in 2012, Take a Chef
+                    began with the deep
+                    belief that the best culinary talent should not be hidden behind the thick walls of a restaurant
+                    kitchen; it should be allowed to shine in the place where everyone enjoys their most precious meals
+                    – their own dining table.</p>
+                <div class="btn-box">
+                    <a href="#" class="btn">Getting Started</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
